<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.apple.todoapp.activity_main_fragment">
    <item
        android:id="@+id/menu_edit"
        android:orderInCategory="1"
        android:icon="@drawable/ic_pencil"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/Delete"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_sort"
        android:title="@string/sort"
        app:showAsAction="always"
        android:icon="@drawable/ic_sort">
        <menu>
            <item
                android:id="@+id/sort_Title"
                android:title="@string/sort_title" />
            <item
                android:id="@+id/sort_Date"
                android:title="@string/sort_date" />
            <item
                android:id="@+id/sort_Priority"
                android:title="@string/sort_priority" />
        </menu>
    </item>

</menu>

